--- a/app/core/styles/index.css
+++ b/app/core/styles/index.css
@@ -7,6 +7,45 @@
     @apply w-full text-[#333];
   }
 }
+.ping {
+  --uib-size: 45px;
+  --uib-speed: 2s;
+  --uib-color: #deb52d;
+
+  position: relative;
+  height: var(--uib-size);
+  width: var(--uib-size);
+}
+
+.ping::before,
+.ping::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  background-color: var(--uib-color);
+  animation: pulse var(--uib-speed) linear infinite;
+  transform: scale(0);
+  opacity: 0;
+}
+
+.ping::after {
+  animation-delay: calc(var(--uib-speed) / -2);
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
 
 .title {
   @apply m-0 w-full pt-20;
